# miniBUDE

cupla/: CMakeLists.txt  CUPLA.cmake  README.md  bude.c
cupla/src/: bude.cpp  bude_cupla.cpp  shared.cpp  shared.hpp
